<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#DFF2FF"
    tools:context="fr.indianacroft.wildhunt.HomeGameMaster">

    <EditText
        android:id="@+id/name_quest"
        android:layout_width="329dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/hint_quest_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/border"
        android:layout_below="@+id/playerActivityNameQuestTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/life_duration_quest_title"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/description_quest"
        android:layout_width="326dp"
        android:layout_height="107dp"
        android:ems="10"
        android:background="@drawable/border"
        android:inputType="textPersonName"
        android:gravity="center"
        android:hint="@string/hint_quest_description"
        android:maxLength="200"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/butAddNewChallenge"
        app:layout_constraintTop_toBottomOf="@+id/spinner_challenge" />

    <TextView
        android:id="@+id/life_duration_quest_title"
        android:layout_width="200dp"
        android:layout_height="23dp"
        android:text="@string/life_duration_quest_title"
        android:background="@drawable/border2"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/name_quest"
        android:layout_toEndOf="@+id/name_quest"
        app:layout_constraintRight_toLeftOf="@+id/spinner_challenge"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/description_quest"
        app:layout_constraintTop_toBottomOf="@+id/name_quest" />

    <Spinner
        android:id="@+id/spinner_challenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/name_quest"
        android:layout_below="@+id/life_duration_quest_title"
        android:layout_alignBottom="@+id/name_quest"
        android:layout_toRightOf="@+id/name_quest"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/life_duration_quest_title"
        app:layout_constraintBottom_toTopOf="@+id/description_quest"
        app:layout_constraintTop_toBottomOf="@+id/name_quest" />

    <Button
        android:id="@+id/button_create_quest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_quest_button"
        android:layout_below="@+id/butAddNewChallenge"
        android:layout_centerHorizontal="true"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <Button
        android:id="@+id/butAddNewChallenge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:text="@string/add_new_challenge"
        android:textColor="#FFFFFF"
        android:background="@drawable/button_shape"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintTop_toBottomOf="@+id/description_quest" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="328dp"
        android:layout_height="155dp"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/recyclerView"
        app:layout_constraintBottom_toTopOf="@+id/button_create_quest"
        app:layout_constraintTop_toBottomOf="@+id/butAddNewChallenge" />

</android.support.constraint.ConstraintLayout>
