<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start"
    android:background="@color/newcolor2">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_content"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="fr.indianacroft.wildhunt.ValidateQuestActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/appbar_padding_top"
            android:description="@style/AppTheme.AppBarOverlay"
            android:background="@drawable/bars_colors">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:background="@color/newcolor">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:fontFamily="sans-serif"
                    android:gravity="center"
                    android:text="@string/mes_d_fis_valider"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/imageViewAvatar"
                    android:layout_width="66dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/pirate_head"
                    android:layout_gravity="end"
                    android:padding="5dp"/>

            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.AppBarLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:layout_editor_absoluteY="25dp"
            tools:layout_editor_absoluteX="8dp">

            <TextView
                android:id="@+id/textView8"
                android:gravity="center"
                android:layout_width="0dp"
                android:layout_weight="0.87"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape2"
                android:text="@string/challenge"
                android:textColor="#FFFFFF"
                android:textSize="18dp"
                style="@style/Title"/>

            <TextView
                android:id="@+id/textView9"
                style="@style/Title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.16"
                android:background="@drawable/button_shape2"
                android:gravity="center"
                android:textSize="18dp"
                android:text="@string/nom_du_joueur"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="0dp"
                android:gravity="center"
                style="@style/Title"
                android:layout_weight="0.64"
                android:layout_height="match_parent"
                android:background="@drawable/button_shape2"
                android:text=""
                android:textColor="#FFFFFF" />

        </LinearLayout>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:layout_editor_absoluteY="111dp"
            tools:layout_editor_absoluteX="0dp">

            <ListView
                android:id="@+id/listView"
                android:layout_width="0dp"
                android:layout_height="440dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">
            </ListView>

        </android.support.constraint.ConstraintLayout>

    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main"
        app:menu="@menu/activity_main_drawer" />

</android.support.v4.widget.DrawerLayout>

